Mon Oct 31 16:38:30 2005  Byron Harris  <harris_b@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.cpp:

          Avoid compiler error generated by Sun CC 5.3 because
          a namespace terminates with a "}".

        * dds/DCPS/DataSampleHeader.h:

          Avoid compiler warning generated by Sun CC 5.3.
	
Tue Oct 25 17:26:38 MST 2005   Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.h:

          Moved SimpleTcpTransport rch include and added SimpleTcpTransport
          to properly instantiate the templates on gcc on solaris.

        * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.inl:

          Moved inline methods into cpp.

Tue Oct 25 15:22:28 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/TransportDefs.h:

          Removed using the pointer as the DataLink id.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:

          Can not use LONG_MAX for CORBA::Long because on some
          architectures the long is 8 bytes while a CORBA::Long
          is always 4 bytes.

        * tests/DCPS/Serializer/SerializerTest.cpp:

          Fixed issue with using a long double as a
          character array all the time.

Tue Oct 25 13:18:31 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/WriteDataContainer.h:

          Add a space to some templates.  Things of the form <::DDS::Ident
          won't work because <: is a C++ digraph.

        * dds/DCPS/DataReaderImpl.cpp:

          Fix an initialization order warning

Sun Oct 23 16:19:14 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm: