@@ -1,3 +1,11 @@
+Mon Oct 31 16:43:52 2005  Byron Harris  <harris_b@ociweb.com>
+
+        * dds/DCPS/Marked_Default_Qos.cpp:
+
+          Replaced usage of ACE_static_cast<::DDS...> with
+          static_cast< ::DDS...> as the <: was confusing the
+          Sun CC 5.3 compiler.
+
 Mon Oct 31 16:38:30 2005  Byron Harris  <harris_b@ociweb.com>
 
         * dds/DCPS/BuiltInTopicUtils.cpp:
@@ -8,7 +16,7 @@ Mon Oct 31 16:38:30 2005  Byron Harris  <harris_b@ociweb.com>
         * dds/DCPS/DataSampleHeader.h:
 
           Avoid compiler warning generated by Sun CC 5.3.
-	
+
 Tue Oct 25 17:26:38 MST 2005   Trevor Fields  <fields_t@ociweb.com>
 
         * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.cpp:
